# Comic_book_reader

./: CMakeLists.txt  README.md
archive_test/: archive.cbz
data/: stylesheet.qss
data/comics/: onePiece003.cbz  onePiece005.cbz
doc/design/: UML_fileFormat.drawio  UML_fileType.drawio  filters.md  signalsSlots_classes.drawio
src/: CMakeLists.txt  main.cpp
src/backend/: Archive.cpp  Archive.hpp  Filtrage.cpp  Filtrage.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp  WindowComponents.cpp  WindowComponents.hpp
src/models/: Datatypes.cpp  Datatypes.hpp
